--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a{
     text-decoration: none;
 }
 
-/* home */
+/* header */
 
 header{
     width: 100%;
@@ -62,6 +62,30 @@ header ul li a i:hover{
     scale: 1.25;
     color: #000;
 }
+
+/* footer */
+
+.footer{
+    width: 100%;
+    background-color: #020617;
+    height: 65px;
+    margin-top: 40px;
+    padding: 10px 20px;
+    display: flex;
+}
+
+.footer div{
+    width: 20%;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    /* justify-content: center; */
+    color: #fff;
+    font-size: 14px;
+}
+
+
+/* home */
 
 .main{
     width: calc(100% - 40px);
@@ -134,7 +158,7 @@ header ul li a i:hover{
 
 .cards{
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
     /* background-color: #fff; */
     display: flex;
     justify-content: center;
@@ -182,7 +206,6 @@ header ul li a i:hover{
 .card-text{
     margin-bottom: .75rem;
 }
-
 
 
 /* Responsive */
